# uta

./: Cargo.toml  Makefile  README.md  cmds.md  data.json  dlp_cmd.md
helper_script/: run-yt-playlist
src/: api.rs  args.rs  env.rs  main.rs  tui.rs  utils.rs
