[package]
name = "uta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
image = "0.24.7"
log = "0.4.19"
mpvipc = "1.2.2"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = {version = "1.0.164",features = ["derive"]}
serde-partial = "0.3.1"
serde_json = "1.0.97"
tempfile = "3.6.0"
thiserror = "1.0.47"
